<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_room_black_24px"
        android:title="@string/title_map"/>

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_black_24px"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_mode_edit_black_24px"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_bubble_outline_black_24px"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_exit_to_app_black_24px"
        android:title="@string/title_logout" />
</menu>
